# LLM_commit

./: .gitignore  Cargo.toml  config.toml  readme.md
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/config/: app_config.rs  mod.rs  model_config.rs  prompt_config.rs
src/git/: diff.rs  mod.rs  repository.rs  traits.rs
src/llm/: factory.rs  mod.rs  request.rs  response.rs  traits.rs
src/llm/providers/: mod.rs  openai.rs
src/prompt/: mod.rs  terminal.rs  traits.rs
