[package]
name = "llmc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
async-trait = "0.1"
serde_json = "1"
